Added links to missing tutorials in menu.

--- a/_includes/tutorials/menu.html
+++ b/_includes/tutorials/menu.html
@@ -7,5 +7,10 @@
 		<li class="nav-tutorials-events"><a href="/tutorials/events-in-foundry.html">Events In Foundry</a></li>
 		<li class="nav-tutorials-di"><a href="/tutorials/dependency-injection.html">Dependency Injection</a></li>
 		<li class="nav-tutorials-templates"><a href="/tutorials/client-side-templates.html">Client Side Templates</a></li>
+		<li class="nav-tutotials-testing"><a href="/tutorials/unit-testing.html">Unit Testing With Foundry</a></li>
+		<li class="nav-tutotials-lazy-loading"><a href="/tutorials/lazy-loading-modules.html">Lazy Loading Modules</a></li>
+		<li class="nav-tutotials-responsive"><a href="/tutorials/responsive-modules.html">Responsive Modules</a></li>
+		<li class="nav-tutotials-pollyfills"><a href="/tutorials/integrating-pollyfills.html">Integrating Pollyfills</a></li>
+		<li class="nav-tutotials-new-modules"><a href="/tutorials/new-modules-on-the-fly.html">New Modules On The Fly</a></li>
 	</ul>
 </div>
