--- a/_includes/tutorials/menu.html
+++ b/_includes/tutorials/menu.html
@@ -1,16 +1,16 @@
 <div class="nav nav-secondary active-{{ page.secondary_nav }}">
 	<h2>More Tutorials</h2>
 	<ul>
-		<li class="nav-tutorials-index"><a href="/tutorials/">All Tutorials</a></li>
-		<li class="nav-tutorials-getting-started"><a href="/tutorials/getting-started.html">Getting Started</a></li>
-		<li class="nav-tutorials-modules-intro"><a href="/tutorials/introduction-to-modules.html">Introduction To Modules</a></li>
-		<li class="nav-tutorials-events"><a href="/tutorials/events-in-foundry.html">Events In Foundry</a></li>
-		<li class="nav-tutorials-di"><a href="/tutorials/dependency-injection.html">Dependency Injection</a></li>
-		<li class="nav-tutorials-templates"><a href="/tutorials/client-side-templates.html">Client Side Templates</a></li>
-		<li class="nav-tutotials-testing"><a href="/tutorials/unit-testing.html">Unit Testing With Foundry</a></li>
-		<li class="nav-tutotials-lazy-loading"><a href="/tutorials/lazy-loading-modules.html">Lazy Loading Modules</a></li>
-		<li class="nav-tutotials-responsive"><a href="/tutorials/responsive-modules.html">Responsive Modules</a></li>
-		<li class="nav-tutotials-pollyfills"><a href="/tutorials/integrating-pollyfills.html">Integrating Pollyfills</a></li>
-		<li class="nav-tutotials-new-modules"><a href="/tutorials/new-modules-on-the-fly.html">New Modules On The Fly</a></li>
+		<li class="nav-tutorials-index"><a href="{{ site.baseurl }}/tutorials/">All Tutorials</a></li>
+		<li class="nav-tutorials-getting-started"><a href="{{ site.baseurl }}/tutorials/getting-started.html">Getting Started</a></li>
+		<li class="nav-tutorials-modules-intro"><a href="{{ site.baseurl }}/tutorials/introduction-to-modules.html">Introduction To Modules</a></li>
+		<li class="nav-tutorials-events"><a href="{{ site.baseurl }}/tutorials/events-in-foundry.html">Events In Foundry</a></li>
+		<li class="nav-tutorials-di"><a href="{{ site.baseurl }}/tutorials/dependency-injection.html">Dependency Injection</a></li>
+		<li class="nav-tutorials-templates"><a href="{{ site.baseurl }}/tutorials/client-side-templates.html">Client Side Templates</a></li>
+		<li class="nav-tutotials-testing"><a href="{{ site.baseurl }}/tutorials/unit-testing.html">Unit Testing With Foundry</a></li>
+		<li class="nav-tutotials-lazy-loading"><a href="{{ site.baseurl }}/tutorials/lazy-loading-modules.html">Lazy Loading Modules</a></li>
+		<li class="nav-tutotials-responsive"><a href="{{ site.baseurl }}/tutorials/responsive-modules.html">Responsive Modules</a></li>
+		<li class="nav-tutotials-pollyfills"><a href="{{ site.baseurl }}/tutorials/integrating-pollyfills.html">Integrating Pollyfills</a></li>
+		<li class="nav-tutotials-new-modules"><a href="{{ site.baseurl }}/tutorials/new-modules-on-the-fly.html">New Modules On The Fly</a></li>
 	</ul>
 </div>
