--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,15 +9,20 @@
         <meta name="keywords" content="{{ page.meta_keywords }}" />
 
         <!-- syntax highlighting CSS -->
-        <link rel="stylesheet" href="/css/syntax.css">
+        <link rel="stylesheet" href="{{ site.baseurl }}/css/syntax.css">
 
         <!-- Custom CSS -->
-        <link rel="stylesheet" href="/css/main.css">
+        <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css">
 
+        {% if page.stylesheets %}
+          {% for stylesheet in page.stylesheets %}
+            <link rel="stylesheet" media="{{ stylesheet.media }}" type="text/css" href="{{ site.baseurl }}{{ stylesheet.url }}">
+          {% endfor %}
+        {% endif %}
     </head>
     <body>
       <div class="header">
-        <h1 class="logo"><a href="/">{{ site.name }} <em>{{ site.slogan }}</em></a></h1>
+        <h1 class="logo"><a href="{{ site.baseurl }}/">{{ site.name }} <em>{{ site.slogan }}</em></a></h1>
         {% include main_nav.html %}
       </div>
 
