--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,8 +1,8 @@
 @font-face {
 	font-family: "Montserrat";
-	src: url("/fonts/Montserrat/Montserrat-Regular.ttf");
+	src: url("../fonts/Montserrat/Montserrat-Regular.ttf");
 }
 @font-face {
 	font-family: "Sorts Mill Goudy";
-	src: url('/fonts/SortsMillGoudy-Regular.ttf');
+	src: url('../fonts/SortsMillGoudy-Regular.ttf');
 }
