--- a/css/typography.css
+++ b/css/typography.css
@@ -143,3 +143,9 @@ table th {
 	padding-right: .5em;
 	text-align: left;
 }
+
+@media screen and (max-width: 800px) {
+	blockquote, dd, li, p {
+		text-align: left;
+	}
+}
