--- a/_includes/tutorials/code/final.html
+++ b/_includes/tutorials/code/final.html
@@ -11,10 +11,12 @@
 		<div data-modules="WelcomeModule" data-module-options='{"backgroundColor": "#f0f0f0"}'></div>
 
 		<!-- Base Framework -->
-		<script type="text/javascript" src="../../../dist/foundry.concat.js"></script>
+		<script type="text/javascript" src="../../../js/foundry/v0.1.2/foundry.concat.js"></script>
+		<script type="text/javascript" src="../../../js/module-base/module/base.js"></script>
+		<script type="text/javascript" src="../../../js/module-utils/module-utils.concat.js"></script>
 
 		<!-- Your Application Files -->
-		<script type="text/javascript" src="./modules/welcome_module.js"></script>
+		<script type="text/javascript" src="./welcome_module.js"></script>
 
 		<script type="text/javascript">
 
