--- a/_includes/tutorials/code/foundry_boilerplate.html
+++ b/_includes/tutorials/code/foundry_boilerplate.html
@@ -3,14 +3,17 @@
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="x-ua-compatible" content="edge">
-		<title>Getting Started with Foundry: The Boilerplate</title>
+		<title>Getting Started with Foundry: Your First Module</title>
 	</head>
 	<body>
 
 		<!-- Base Framework -->
-		<script type="text/javascript" src="../../../dist/foundry.concat.js"></script>
+		<script type="text/javascript" src="../../../js/foundry/v0.1.2/foundry.concat.js"></script>
+		<script type="text/javascript" src="../../../js/module-base/module/base.js"></script>
+		<script type="text/javascript" src="../../../js/module-utils/module-utils.concat.js"></script>
 
 		<!-- Your Application Files -->
+		<script type="text/javascript" src="./welcome_module.js"></script>
 
 		<script type="text/javascript">
 
