--- a/css/home.css
+++ b/css/home.css
@@ -56,3 +56,10 @@
 	-webkit-column-count: 2;
 	-webkit-column-rule: 1em;
 }
+@media screen and (max-width: 500px) {
+	.browse-code,
+	.download {
+		display: block;
+		margin: 1em 0;
+	}
+}
