Typography change for code labels.

--- a/css/typography.css
+++ b/css/typography.css
@@ -48,6 +48,7 @@ code {
 	font-size: 1em;
 	margin-bottom: -1px;
 	margin-left: -13px;
+	margin-right: 12px;
 	padding: .1em .5em;
 	vertical-align: bottom;
 }
